# Bin2ASCII-STL-Converter

./: CMakeLists.txt  README.md
include/: ASCII_Convert.h  BinSTL.h  red.txt
src/: ASCII_Convert.cpp  BinSTL.cpp  main_desktop.cpp
